[package]
name = "rtmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wyrng = { path = "cargos/wyrng", version = "0.1.0" }
amf = { path = "cargos/amf", version = "0.1.0", features = ["rtmp"] }
bytes = "1.1.0"
