[package]
name = "rtmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wyrng = { path = "cargos/wyrng", version = "0.1.0" }
bytes = "1.1.0"

[dependencies.amf]
path = "cargos/amf"
version = "0.1.0"
default-features = false
features = [
    "amf0-number",
    "amf0-boolean",
    "amf0-string",
    "amf0-object",
    "amf0-ecma_array",
    "amf0-strict_array",
]
